--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
         <item name="android:textSize">24sp</item>
         <item name="android:layout_margin">5dp</item>
         <item name="android:padding">3dp</item>
-        <item name="android:background">@color/white</item>
+<!--        <item name="android:background">@color/white</item>-->
         <item name="android:enabled">false</item>
     </style>
 
